# mocha

./: .gitattributes  .gitignore  README.md  REUSE.toml  flake.nix  pyproject.toml
.github/workflows/: ci.yml  release.yml
doc/img/: mocha.d2
doc/ref/: arch.md  dev_guide.md  release.md  release_notes_template.md
doc/verif/: stages.md
hw/data/: common_project_cfg.hjson
hw/ip/common_cells/include/common_cells/: registers.svh
hw/ip/common_cells/rtl/: addr_decode.sv  counter.sv  delta_counter.sv  exp_backoff.sv  id_queue.sv  lzc.sv  onehot_to_bin.sv  popcount.sv  rr_arb_tree.sv  shift_reg.sv  shift_reg_gated.sv  spill_register.sv  stream_fork.sv  stream_fork_dynamic.sv  stream_join.sv  stream_join_dynamic.sv  stream_mux.sv
hw/top_chip/: chip_mocha_genesys2.core  top_chip_system.core  top_mocha_jtag_id_pkg.core  top_mocha_racl_pkg.core  top_pkg.core
hw/top_chip/data/: clocks_genesys2.xdc  pins_genesys2.xdc  rstmgr_cfg.hjson  timing_genesys2.xdc
hw/top_chip/dv/: mocha_sim_cfgs.hjson  top_chip_sim.core  top_chip_sim_cfg.hjson
hw/top_chip/dv/env/: top_chip_dv_env.core  top_chip_dv_env.sv  top_chip_dv_env_cfg.sv
hw/top_chip/dv/env/seq_lib/: top_chip_dv_base_vseq.sv  top_chip_dv_gpio_smoke_vseq.sv  top_chip_dv_uart_base_vseq.sv  top_chip_dv_vseq_list.sv
hw/top_chip/dv/tb/: tb.sv
hw/top_chip/dv/verilator/: dram_wrapper_sim.sv  top_chip_verilator.cc  top_chip_verilator.core  top_chip_verilator.sv  top_chip_verilator.vlt
hw/top_chip/formal/: top_chip_fpv_ip_cfgs.hjson
hw/top_chip/ip/xbar_peri/data/: xbar_peri.hjson
hw/top_chip/ip/xbar_peri/data/autogen/: xbar_peri.hjson
hw/top_chip/ip/xbar_peri/dv/autogen/: tb__xbar_connect.sv  xbar_cover.cfg  xbar_env_pkg__params.sv  xbar_peri_bind.sv  xbar_peri_sim_cfg.hjson
hw/top_chip/ip/xbar_peri/rtl/autogen/: tl_peri_pkg.sv  xbar_peri.sv
hw/top_chip/ip_autogen/gpio/dv/: gpio_sim_cfg.hjson
hw/top_chip/ip_autogen/pwrmgr/dv/sva/: pwrmgr_rstreqs_sva_if.sv
hw/top_chip/ip_autogen/rstmgr/data/: mocha_rstmgr.ipconfig.hjson
hw/top_chip/ip_autogen/rstmgr/dv/cov/: rstmgr_tgl_excl.cfg
hw/top_chip/ip_autogen/rstmgr/dv/env/: rstmgr_env_pkg.sv
hw/top_chip/ip_autogen/rstmgr/dv/sva/: rstmgr_rst_en_track_sva_if.sv
hw/top_chip/ip_autogen/rstmgr/rtl/: rstmgr.sv  rstmgr_pkg.sv
hw/top_chip/lint/: top_chip_system.vlt
hw/top_chip/rtl/: axi_sram.sv  chip_mocha_genesys2.sv  clkgen_xil7series.sv  ethernet_wrapper.sv  jtag_id_pkg.sv  mem_downsizer.sv  top_chip_system.sv  top_pkg.sv
nix/: CrossToolchain.cmake.in  cheri_toolchain.nix  fpga.nix
rdl/: mocha.rdl
sw/: CMakeLists.txt  cheri_toolchain.cmake
sw/cmake/: busybox.cmake  linux.cmake  opensbi.cmake  tests.cmake
sw/device/: CMakeLists.txt
sw/device/bootrom/: CMakeLists.txt  bootrom.c  data_load.S  rom.ld
sw/device/examples/: CMakeLists.txt  i2c.c  spi.c
sw/device/examples/hello_world/: .gitignore  CMakeLists.txt  boot.S  build.sh  hello_world.c  link.ld
sw/device/lib/boot/: memory.ld  mocha.ld  mocha_dram.ld  mocha_sram.ld
sw/device/lib/hal/: CMakeLists.txt  clkmgr.c  clkmgr.h  mmio.h  mocha.c  mocha.h  mocha_regs.h  rstmgr.c  spi_device.c  spi_device.h  spi_host.c  spi_host.h  timer.c  timer.h  uart.c  uart.h
sw/device/lib/test_framework/: main.c
sw/device/tests/: CMakeLists.txt
sw/device/tests/dram/: CMakeLists.txt
sw/device/tests/isa/: atomics.c
sw/device/tests/spi_device/: flash_mode.c
sw/device/tests/spi_host/: smoketest.c
sw/device/tests/timer/: smoketest.c
sw/device/tests/uart/: smoketest.c
util/: 99-openfpgaloader.rules  artefacts.py  build_sw_collateral_for_sim.py  clang_format.py  clang_tidy.py  debug_test.sh  fpga_runner.py  gdb_response.exp  rdlgenerator.py  vendor_check.sh  verilator-openocd-cfg.tcl  verilator_runner.sh  xbar_check.sh
